--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/index.css">
     <title>Document</title>
 </head>
-<body>
-    <h1>{{name}}</h1>
-</body>
+    <body>
+        <h1>HOME</h1>
+    </body>
 </html>
