--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,35 @@
+/* Root css */
+
+@font-face{
+    font-family: 'gilroy';
+    src: url('/assets/fonts/Gilroy-Light.otf'); /* IE9 Compat Modes */
+    src: url('/assets/fonts/Gilroy-Light.otf') format('embedded-opentype'), /* IE6-IE8 */
+        url('/assets/fonts/Gilroy-Light.otf') format('woff2'), /* Super Modern Browsers */
+        url('/assets/fonts/Gilroy-Light.otf') format('woff'), /* Pretty Modern Browsers */
+        url('/assets/fonts/Gilroy-Light.otf')  format('truetype'), /* Safari, Android, iOS */
+        url('/assets/fonts/Gilroy-Light.otf') format('svg'); /* Legacy iOS */
+}
+
+@font-face{
+    font-family: 'gilroy-bold';
+    src: url('/assets/fonts/Gilroy-ExtraBold.otf'); /* IE9 Compat Modes */
+    src: url('/assets/fonts/Gilroy-ExtraBold.otf') format('embedded-opentype'), /* IE6-IE8 */
+        url('/assets/fonts/Gilroy-ExtraBold.otf') format('woff2'), /* Super Modern Browsers */
+        url('/assets/fonts/Gilroy-ExtraBold.otf') format('woff'), /* Pretty Modern Browsers */
+        url('/assets/fonts/Gilroy-ExtraBold.otf')  format('truetype'), /* Safari, Android, iOS */
+        url('/assets/fonts/Gilroy-ExtraBold.otf') format('svg'); /* Legacy iOS */
+}
+
+/* variables */
+
+:root{
+    --backgroung-color: #cfcfcf;
+    --red-color: #D77676;
+}
+
 *{
-    padding: 0;
+
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
