--- a/src/views/models.html
+++ b/src/views/models.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/styles/models.css">
 
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
@@ -12,17 +13,32 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>{{name}}</h1>
-    <model-viewer src={{ path }}
-        ios-src={{ pathios }}
-        poster=""
-        alt={{ desc }}
-        shadow-intensity="2"
-        camera-controls
-        auto-rotate ar>
-    </model-viewer>
-
-
+    <div class="app">
+        <div class="app-title">
+            <h1 class="name">MIA</h1>
+            <p class="ano">2021</p>
+            <p class="atr1">3D View</p>
+            <p class="atr2">Augmented Reality </p>
+        </div>
+        <div class="app-model-details">
+            <h1>{{ name }}</h1>
+            <p>{{ element }}</p>
+        </div>
+        <div class="app-viewer-card">
+            <model-viewer src={{ path }}
+                ios-src={{ pathios }}
+                poster=""
+                alt={{ desc }}
+                shadow-intensity="2"
+                camera-controls
+                auto-rotate ar>
+            </model-viewer>
+            <div class="app-icons">
+                <h1>Tecnologies</h1>
+                <div class="icons"></div>
+            </div>
+        </div>
+    </div>
 
     <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
