--- a/src/views/models.html
+++ b/src/views/models.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/models.css">
-
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
@@ -21,7 +20,7 @@
             <p class="atr2">Augmented Reality </p>
         </div>
         <div class="app-model-details">
-            <h1>{{ name }}</h1>
+            <h1 id="modelname">{{ name }}<span id="modelcolor" style="display: none;">{{ color }}</span></h1>
             <p>{{ element }}</p>
         </div>
         <div class="app-viewer-card">
@@ -39,7 +38,7 @@
             </div>
         </div>
     </div>
-
+    <script src="/scripts/colors.js"></script>
     <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
 </script>
