--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -28,8 +28,13 @@
 }
 
 *{
-
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body, html{
+    background-color: gray;
+    height: 100%;
+    width: 100%;
 }
