--- a/public/styles/models.css
+++ b/public/styles/models.css
@@ -1,85 +1,101 @@
-.app-title {
+.app{
+    display: flex;
     text-align: center;
-    background-color: var(--backgroung-color);
-    padding: 40px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(51, 51, 51);
+    height: 100vh;
+    width: 100vw;
+
+    flex-direction: column;
+
+    font-family: 'gilroy';
     color: white;
-    padding-bottom: 70px;
 }
 
-.app-title .name{
-    padding: 0;
-    line-height: 40px;
-    margin-bottom: 0;
-    font-family: 'gilroy-bold';
-    font-size: 70px;
-}
-
-.app-title .ano{
-    padding: 0;
-    margin-top: 0px;
-    font-family: 'gilroy';
-    font-size: 67px;
-
-    margin-bottom: 10px;
-}
-
-.app-title .atr1, .app-title .atr2{
-
-    font-family: 'gilroy';
-    font-size: 20px;
-}
-
-.app-model-details{
-    transform: translateY(-35px);
-    padding-top: 15px;
-    padding-bottom: 75px;
-    text-align: center;
-    color: white;
-    background-color: #707070;
-    border-radius: 40px 40px 0px 0px;
-}
-
-.app-model-details h1{
-    font-family: 'gilroy-bold';
-    font-size: 45px;
-}
-
-.app-model-details p{
-    font-family: 'gilroy';
-    font-size: 20px;
-}
-
-.app-viewer-card::after{
-    content: "";
-    background-color: green;
-}
-.app-viewer-card{
-    transform: translateY(-95px);
+.container{
     display: flex;
     flex-direction: column;
-    top: 300px;
-    border-radius: 40px 40px 0px 0px;
-    background-color: rgb(255, 255, 255);
+    height: 100%;
+    width: 100%;
+    max-width: 500px;
 }
+
+.container > div{
+    flex: 1;
+    background-color: red;
+}
+
+.container > .header{
+    flex: 2;
+    padding: 10px;
+    background-color: var(--backgroung-color);
+}
+
+.container > .header > .name{
+    margin-top: 17px;
+    font-family: 'gilroy-bold';
+    font-size: 50px;
+}
+
+.container > .header > .ano{
+    font-family: 'gilroy';
+    font-size: 45px;
+    line-height: 13px;
+    margin-bottom: 25px;
+}
+
+.container > .header > .atr1, .atr2{
+    font-family: 'gilroy';
+    font-size: 12px;
+}
+
+
+.container > .info{
+    flex: 1;
+    padding: 10px;
+    background-color: var(--backgroung-color);
+    max-height: 200px;
+}
+
+.container > .info h1{
+    margin-top: 5px;
+    font-family: 'gilroy-bold';
+}
+
 
 model-viewer {
-
     width: 100%;
-    height: 270px;
-    border-radius: 40px 40px 0px 0px;
-    outline: none;
-    --poster-color: white;
-    --poster-border-radius: 40px 40px 0px 0px;
-    --progress-mask: none;
-    --progress-bar-color: var(--red-color);
+    height: 100%;
+    min-height: 100px;
+    border: none;
+  }
+
+.container > .modelviewer{
+    flex: 3;
+
+    background-color: white;
 }
 
-.app-icons{
+.container > .tec{
+    color: gray;
+    flex: 2;
+    padding: 10px;
+    background-color: white;
+}
+
+.container > .tec h1{
+    font-size: 20px;
+}
+
+.footer{
     text-align: center;
-
-    background-color: rgb(255, 255, 255);
-    font-family: 'gilroy';
-    font-size: 10px;
-    padding: 15px;
-
+    padding: 10px;
+    padding-top: 12px;
+    text-align: center;
 }
+
+.footer p{
+    font-size: 9px;
+}
+
