--- a/src/views/models.html
+++ b/src/views/models.html
@@ -5,37 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/models.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-    <title>Document</title>
+    <title>AR aquinos app</title>
 </head>
 <body>
     <div class="app">
-        <div class="app-title">
-            <h1 class="name">MIA</h1>
-            <p class="ano">2021</p>
-            <p class="atr1">3D View</p>
-            <p class="atr2">Augmented Reality </p>
-        </div>
-        <div class="app-model-details">
-            <h1 id="modelname">{{ name }}<span id="modelcolor" style="display: none;">{{ color }}</span></h1>
-            <p>{{ element }}</p>
-        </div>
-        <div class="app-viewer-card">
-            <model-viewer src={{ path }}
-                ios-src={{ pathios }}
-                poster=""
-                alt={{ desc }}
-                shadow-intensity="2"
-                camera-controls
-                auto-rotate ar>
-            </model-viewer>
-            <div class="app-icons">
-                <h1>Tecnologies</h1>
-                <div class="icons"></div>
+        <div class="container">
+            <div class="header">
+                <h1 class="name">MIA</h1>
+                <p class="ano">2021</p>
+                <p class="atr1">3D View</p>
+                <p class="atr2">Augmented Reality </p>
             </div>
+            <div class="info">
+                <h1 id="modelname">{{ name }}<span id="modelcolor" style="display: none;">{{ color }}</span></h1>
+                <p>{{ element }}</p>
+            </div>
+            <div class="modelviewer">
+                    <model-viewer 
+                    src={{ path }}
+                    ios-src={{ pathios }}
+                    poster=""
+                    alt={{ desc }}
+                    shadow-intensity="2"
+                    camera-controls
+                    auto-rotate ar>
+                </model-viewer>
+            </div>
+            <div class="tec">
+                <h1>Tecnologies</h1>
+            </div>
+        </div>
+        <div class="footer">
+            <img src="/assets/img/aquinos.svg" alt="">
+            <p>All rights reserved | aquinos 2021</p>
         </div>
     </div>
     <script src="/scripts/colors.js"></script>
