--- a/src/views/models.html
+++ b/src/views/models.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/models.css">
     <link rel="stylesheet" href="/styles/responsive.css">
+    <link rel="stylesheet" href="/styles/anotations.css">
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
@@ -34,6 +35,9 @@
                     shadow-intensity="2"
                     camera-controls
                     auto-rotate ar>
+                    <button slot="hotspot-foot" data-position="-0.8 0.01 0.35" data-normal="-0.0 0.0 0.0">
+                        <div id="annotation">Teste - Pé de metal</div>
+                      </button>
                 </model-viewer>
             </div>
             <div class="tec">
