--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -13,9 +13,17 @@
         flex: 1;
     }
 
+    .container > .header > .name{
+        margin-top: 300px;
+    }
+
     .container > .info{
         flex: 1;
         max-height: 100%;   
+    }
+
+    .container > .info h1{
+        margin-top: 320px;
     }
 
     .container > .modelviewer{
