--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <title>Document</title>
 </head>
     <body>
-        <h1>home</h1>
+        <div class="home">
+            <div class="intro">
+                <h1>MIA</h1>
+                <p>2021</p>
+            </div>
+            <div class="footer">
+                <img src="/assets/img/aquinos.svg" alt="">
+                <p>All rights reserved | aquinos 2021</p>
+            </div>
+        </div>
     </body>
 </html>
