--- a/src/views/models.html
+++ b/src/views/models.html
@@ -62,6 +62,7 @@
         </div>
     </div>
     <script src="/scripts/colors.js"></script>
+    <script src="/scripts/getlocation.js"></script>
     <script src="/scripts/animations.js"></script>
     <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
