--- a/src/views/models.html
+++ b/src/views/models.html
@@ -33,6 +33,8 @@
                     poster=""
                     alt={{ model.description }}
                     shadow-intensity="2"
+                    exposure="5"
+                    environment-image="/assets/img/hdr.jpg"
                     camera-controls
                     autoplay 
                     auto-rotate ar
