poster loading image

--- a/public/styles/models.css
+++ b/public/styles/models.css
@@ -71,6 +71,10 @@ model-viewer {
     border: none;
   }
 
+.modelviewer#reveal{
+    background: black;
+}
+
 .container > .modelviewer{
     flex: 3;
 
