--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="footer">
                 <img src="/assets/img/aquinos.svg" alt="">
-                <p>All rights reserved | aquinos 2021</p>
+                <p>All rights reserved | aquinos 2021 | Alpha release</p>
             </div>
         </div>
     </body>
