--- a/src/views/models.html
+++ b/src/views/models.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/models.css">
     <link rel="stylesheet" href="/styles/responsive.css">
     <link rel="stylesheet" href="/styles/anotations.css">
+    <link rel="stylesheet" href="/styles/loadinganim.css">
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
@@ -14,6 +15,17 @@
     <title>AR aquinos app</title>
 </head>
 <body>
+    <div class="loadanim">
+        <div class="loading-container">
+                <h1>MIA</h1>
+                <p>2021</p>
+            <div class="loading-desc">
+                <h3>Mia by Aquinos</h3>
+                <p>see <strong id="model-name">{{model.name}}</strong> model in your home</p>
+                <span>#Alpha release v0.0.5</span>
+            </div>
+        </div>
+    </div>
     <div class="app">
         <div class="container">
             <div class="header">
@@ -28,10 +40,8 @@
             </div>
             <div class="modelviewer">
                     <model-viewer 
-                    id="reveal"
                     src={{ model.devpath }}
                     ios-src={{ model.devpathios }}
-                    poster="/assets/img/loading.svg"
                     alt={{ model.description }}
                     shadow-intensity="2"
                     exposure="6"
@@ -62,12 +72,13 @@
         </div>
         <div class="footer">
             <img src="/assets/img/aquinos.svg" alt="">
-            <p>All rights reserved | aquinos 2021 | Alpha release</p>
+            <p>All rights reserved | aquinos 2021 | Alpha release v0.0.5</p>
         </div>
     </div>
     <script src="/scripts/colors.js"></script>
     <script src="/scripts/getlocation.js"></script>
     <script src="/scripts/animations.js"></script>
+    <script src="/scripts/loading.js"></script>
     <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
 </script>
