--- a/src/views/404.html
+++ b/src/views/404.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <div class="error">
-        <h1 class="error-title" >404</h1>
-        <p>page not found!</p>
+        <div class="error-title-cont">
+            <div class="cont">
+                <h1>404</h1>
+                <p>Hi there!</p>
+                <p>I tried to find this model but I had no luck...</p>
+                <p></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
