--- a/src/views/models.html
+++ b/src/views/models.html
@@ -16,14 +16,16 @@
 </head>
 <body>
     <div class="loadanim">
-        <div class="loading-container">
+        <div class="loading-cont">
+            <div class="loading-container">
                 <h1>MIA</h1>
                 <p>2021</p>
             <div class="loading-desc">
-                <h3>Mia by Aquinos</h3>
+                <h3>By Aquinos</h3>
                 <p>see <strong id="model-name">{{model.name}}</strong> model in your home</p>
                 <span>#Alpha release v0.0.5</span>
             </div>
+        </div>
         </div>
     </div>
     <div class="app">
@@ -44,10 +46,9 @@
                     ios-src={{ model.devpathios }}
                     alt={{ model.description }}
                     shadow-intensity="2"
-                    exposure="6"
+                    exposure="4"
                     environment-image="/assets/img/hdr.jpg"
                     camera-controls
-                    disable-zoom
                     autoplay 
                     auto-rotate ar
                     >     
