--- a/public/styles/models.css
+++ b/public/styles/models.css
@@ -134,3 +134,38 @@ model-viewer {
     font-size: 9px;
 }
 
+
+#ar-button{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    top: 90%;
+    left: 90%;
+    width: 200px;
+    height: 40px;
+    transform: translate(-160px, -30px);
+    font-family: 'Gilroy';
+    align-items: center;
+    padding: 10px;
+    color: #242424;
+    font-size: 15px;
+    backdrop-filter:  blur(0.6rem);
+    border-radius: 0px;
+    transition: background-color 300ms ease-in-out;
+}
+
+#ar-button:hover{
+    background-color: rgba(204, 204, 204, 0.4);
+}
+
+.ar-desable{
+    padding: 20px;
+    position: absolute;
+    display: block;
+    text-align: center;
+    z-index: 2;
+    color: black;
+}
