--- a/src/views/models.html
+++ b/src/views/models.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/models.css">
-    <link rel="stylesheet" href="/styles/responsive.css">
     <link rel="stylesheet" href="/styles/anotations.css">
     <link rel="stylesheet" href="/styles/loadinganim.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
@@ -41,7 +41,12 @@
                 <p>{{ model.element }}</p>
             </div>
             <div class="modelviewer">
-                    <model-viewer 
+                {% if isdektop %}
+                    <div class="ar-desable">
+                        <p>Open on your mobile device to enable AR</p>
+                    </div>
+                {% endif %}
+                    <model-viewer
                     src={{ model.devpath }}
                     ios-src={{ model.devpathios }}
                     alt={{ model.description }}
@@ -51,7 +56,14 @@
                     camera-controls
                     autoplay 
                     auto-rotate ar
-                    >     
+                    >
+                    {% if isdektop %}
+                        <a slot="ar-button" id="ar-button-desable"></a>
+                    {% else %}
+                        <button slot="ar-button" id="ar-button">
+                            See in your space<span><img src="/assets/img/ar-icon.svg" alt=""></span>
+                        </button>
+                    {% endif %}
                 </model-viewer>
             </div>
                 {% if controler %}
@@ -78,6 +90,7 @@
     </div>
     <script src="/scripts/colors.js"></script>
     <script src="/scripts/getlocation.js"></script>
+    <script src="/scripts/ismobile.js"></script>
     <script src="/scripts/animations.js"></script>
     <script src="/scripts/loading.js"></script>
     <script type="module"
