--- a/public/styles/loadinganim.css
+++ b/public/styles/loadinganim.css
@@ -11,15 +11,10 @@
     animation: opacity 1s ease-out 7s;
 }
 
-.loadanim::after{
-    content: "";
-    background-image: url('../assets/img/CIARA_AMB_F.jpg');
+.loading-image{
     background-size: cover;
+    background-position: center;
     opacity: 0.4;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     position: absolute;
     z-index: -1;
     animation: image 7s ease-in;
@@ -109,11 +104,11 @@
 @keyframes image{
     from{
         opacity: 0.8;
-        transform: scale(1.4);
+        transform: scale(1.2);
     }
     to{
         opacity: 0.4;
-        transform: scale(1);
+        transform: scale(1.4);
     }
 }
 
