--- a/public/styles/loadinganim.css
+++ b/public/styles/loadinganim.css
@@ -25,6 +25,7 @@
     background-color: rgba(233, 233, 233, 0.1);
     height: 500px;
     padding: 60px;
+    -webkit-backdrop-filter: blur(0.8px);
     backdrop-filter:  blur(0.8rem);
     border-radius: 15px;
 }
@@ -104,11 +105,11 @@
 
 @keyframes image{
     from{
-        opacity: 0.8;
+        opacity: 0.9;
         transform: scale(1.4);
     }
     to{
-        opacity: 0.4;
+        opacity: 0.9;
         transform: scale(1);
     }
 }
