--- a/public/styles/models.css
+++ b/public/styles/models.css
@@ -23,7 +23,7 @@
 
 .container > div{
     flex: 1;
-    background-color: red;
+    background-color: rgb(255, 255, 255);
 }
 
 .container > .header{
@@ -61,6 +61,43 @@
 .container > .info h1{
     margin-top: 5px;
     font-family: 'gilroy-bold';
+}
+
+
+.modelnone{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: black;
+}
+
+.modelnone h1{
+    padding: 25px 25px 15px 25px;
+    font-size: 20px;
+}
+
+.modelnone a{
+    background-color: rgb(177, 177, 177);
+    padding: 15px 40px 15px 40px;
+    color: white;
+    font-family: 'gilroy-bold';
+    text-decoration: none;
+    border-radius: 8px;
+    transition: 300ms ease-in;
+    outline: none;
+}
+.modelnone a:active{
+    opacity: 0.8;
+    border-radius: 0px;
+}
+
+.modelnone a:hover{
+    opacity: 0.8;
+    border-radius: 0px;
 }
 
 
@@ -169,3 +206,5 @@ model-viewer {
     z-index: 2;
     color: black;
 }
+
+
