start build qr js code

--- a/src/views/qrcode.html
+++ b/src/views/qrcode.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/qr.css">
+    <script src="/scripts/qrcode.js"></script>
     <title>Document</title>
 </head>
     <body>
-        <div class="qr-cont">
+        <div class="qr-cont" id="qrname" data-modelname={{modelname}}>
             <div class="qr">
+                <div id="qrcode"></div>
                 <h3>Open in your mobile device</h3>
-                <h4>to see your models in your place</h4>
+                <h4>to see ours models in your place</h4>
             </div>
         </div>
+    
+        <script src="/scripts/generateqr.js"></script>
     </body>
 </html>
