--- a/src/views/qrcode.html
+++ b/src/views/qrcode.html
@@ -10,11 +10,13 @@
     <title>Document</title>
 </head>
     <body>
-        <div class="qr-cont" id="qrname" data-modelname={{modelname}}>
+        <div class="qr-cont">
             <div class="qr">
                 <div id="qrcode"></div>
                 <h3>Open in your mobile device</h3>
-                <h4>to see ours models in your place</h4>
+                <h4>to see {{modelname}} in your place</h4>
+                <p id="byaquinos"> MIA by <a href="https://www.aquinosgroup.com/">AQUINOS</a></p>
+
             </div>
         </div>
     
