fix some bugs and html titles

--- a/src/views/models.html
+++ b/src/views/models.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
     <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script>
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-    <title>AR Aquinos</title>
+    <title>MIA 2021 | Ar {{ model.name }} model</title>
 </head>
 <body>
     <div class="loadanim">
