--- a/src/views/qrcode.html
+++ b/src/views/qrcode.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/home.css">
     <link rel="stylesheet" href="/styles/qr.css">
     <script src="/scripts/qrcode.js"></script>
-    <title>Document</title>
+    <title>MIA 2021 | Open in mobile </title>
 </head>
     <body>
         <div class="qr-cont">
@@ -15,11 +15,12 @@
                 <div id="qrcode"></div>
                 <h3>Open in your mobile device</h3>
                 <h4>to see {{modelname}} in your place</h4>
-                <p id="byaquinos"> MIA by <a href="https://www.aquinosgroup.com/">AQUINOS</a></p>
+                <p id="byaquinos"> MIA by <a href="https://www.aquinosgroup.com/" target="_blank">AQUINOS</a></p>
 
             </div>
         </div>
-    
+        
+        <script src="/scripts/getlocation.js"></script>
         <script src="/scripts/generateqr.js"></script>
     </body>
 </html>
