Add link models on home page

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -28,5 +28,6 @@
                 <p>All rights reserved | aquinos 2021 | Alpha release v0.0.5</p>
             </div>
         </div>
+    <script src="/scripts/linkpath.js"></script>
     </body>
 </html>
