--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -30,7 +30,7 @@
 
 
 .models{
-    margin-top: 20px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-self: center;
@@ -49,42 +49,47 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(245, 245, 245);
-    width: 150px;
-    height: 200px;
+    width: 200px;
+    height: 250px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     opacity: 1;
     text-align: center;
     border-radius: 4px;
-    transition: 400ms ease-in-out;
+    transition: 300ms ease-in-out;
+    animation-name: load;
+    animation-duration: 400ms;
+    animation-timing-function: ease-in-out;
 }
 
 .model-card:hover{
-    opacity: 0.5;
+    opacity: 0.7;
     transform: translate(0px, -5px);
+
 }
 
 .model-card:active{
-    opacity: 0.5;
+    opacity: 0.7;
     transform: translate(0px, -5px);
 }
 
 .model-card h2{
-    opacity: 1;
+    opacity: 0.7;
     width: 80%;
     padding: 5px;
     background-color: white;
 }
 
 .model-card p{
+    opacity: 0.7;
     background-color: white;
     width: 80%;
-    font-size: 12px;
-    margin-bottom: 5px;
+    font-size: 11px;
+    padding-bottom: 10px;
     color: rgb(235, 66, 66);
+    font-family: 'gilroy-bold';
 }
-
-
 
 
 .footer{
@@ -102,4 +107,25 @@
     font-family: 'gilroy';
     color: white;
     font-size: 10px;
+}
+
+
+@keyframes load{
+    from{
+        opacity: 0;
+        transform: translate(0px, 50px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0px, 0px);
+    }
+}
+
+
+@media (max-width: 600px){
+
+    .model-card{
+        margin: 5px;
+    }
+
 }
